# easyJetDCFReport

./: README.md  advanced_visualizations.py  app.py  dcf_analyzer.py  fetch_peer_returns.py  generate_report.py  monte_carlo.py  pyproject.toml  refinitiv_data.py  simple_app.py  utils.py  working_app.py
attached_assets/: AIRF_PA_returns.csv  EZJ_L_returns.csv  EasyJet- complete.xlsx  EasyJet_DCF_Report.html  ICAG_L_returns.csv  JET2_L_returns.csv  KNIN_S_returns.csv  LHAG_DE_returns.csv  RYA_I_returns.csv  WIZZ_L_returns.csv
