[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit-elements>=0.1.0",
    "streamlit>=1.43.2",
    "streamlit-card>=1.0.2",
    "altair>=5.5.0",
    "streamlit-extras>=0.6.0",
    "openpyxl>=3.1.5",
]
